# web-weixin

./: CMakeLists.txt  INSTALL  Makefile  README.md  README.md~  index.html  params.json
data/: weixin.desktop
debian/: changelog  control  copyright
src/: WebApp.vala  WebAppWindow.vala  WeiXin.vala
